--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,8 +20,8 @@
           
       item:
         is_active:
-          'true': "販売中"
-          'false': "販売停止中"
+          'TURE': "販売中"
+          'FALSE': "販売停止中"
           
     # activerecord:
     #   errors:
